Android video thumbnail: Fix allocation size for vpx thumbnails.

When serializing the in-memory vpx video frame into
MojoSharedBufferVideoFrame, we currently don't consider the padding in
each plane in YUV frame, but we pass the strides, which will trigger a
DCHECK.

This CL also allocates the padding in each plane into the shared memory.

Alternatively, we may remove the padding when copying data.


Bug: 891794
Change-Id: I6a81c8f8afcd8ff063f90523773ba07aac2eb7fa
Reviewed-on: https://chromium-review.googlesource.com/c/1260007
Reviewed-by: Dan Sanders <sandersd@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Commit-Queue: Xing Liu <xingliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596441}
Former-commit-id: e6123d992a898239427cff7e518638b6a75cdbd7